adjust text contrast on links and fix social media links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ rgba(241, 139, 128, 0.7) - Light red
 #research a {
     display: block;
     margin-bottom: 10px;
-    color: #007bff;
+    color: #0040ff;
     text-decoration: none;
 }
 #research a:hover {
@@ -116,7 +116,7 @@ rgba(241, 139, 128, 0.7) - Light red
     border: 0;
 }
 
-/* logo image for the footer */
+/* footer section */
 .logo-footer {
     height: 40px; /* Adjust the height as needed */
     width: auto; /* Maintain aspect ratio */
@@ -127,6 +127,19 @@ rgba(241, 139, 128, 0.7) - Light red
     margin-bottom: 10px;
 }
 
+#social-networks {
+    text-align: end;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: rgb(12, 12, 12);
+}
 
 /* booking page */
 
